--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Daniel Peraza | Data Scientist</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="deperazar, Daniel, data science" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="I am Daniel, a Colombian Data Scientist | Data Scientist" />
 
     <link
       rel="stylesheet"
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Daniel Peraza</span>
           <br />
-          I'm the Unknown Developer.
+          I'm the Data Scientist you need.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                I am a Data Scientist and Machine Learning Engineer from Bogotá, Colombia who loves to provide high-value insights and solutions through data.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                I am skilled in Python, PostgreSQL, SQLite, Matplotlib, Keras, Pandas, Scikit-Learn, Javascript, React.js, Node.js and many others.
+              </p>
+              <p class="about-wrapper__info-text">
+              I like to spend my nights beside my guitar and a good book. Huge fan of classical, medieval and modern history. Always down for some 
+              trekking.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -96,23 +99,104 @@
                 </a>
               </span>
             </div>
+            
+          </div>
+        </div>
+      </div>
+      <div class="container slider_box load-hidden">
+        <div class="slider">
+          <div class="slide-track">
+            <div class="slide">
+              <img src="assets/icons/python.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/postgresql.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/sqlite.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/matplotlib.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/pandas.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/tensorflow.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/keras.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/scikitlearn.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/numpy.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/javascript.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/react.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/node.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/python.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/postgresql.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/sqlite.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/matplotlib.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/pandas.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/tensorflow.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/keras.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/scikitlearn.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/numpy.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/javascript.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/react.png" width="80px" alt="" />
+            </div>
+            <div class="slide">
+              <img src="assets/icons/node.png" width="80px" alt="" />
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- /END About Section -->
 
+    
+
     <!-- **** Projects Section **** -->
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
+          <h2 class="section-title bone-text">Projects</h2>
 
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">House price prediction</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -126,23 +210,23 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/deperiv/house-price-prediction/blob/main/house-price-prediction.ipynb"
                 >
-                  See Live
+                  Check the project
                 </a>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="#!"
                 >
                   Source Code
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/deperiv/house-price-prediction/blob/main/house-price-prediction.ipynb" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -153,7 +237,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/projects/house-price-prediction.jpg"
                     />
                   </div>
                 </a>
@@ -166,7 +250,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Customer churn prediction</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -180,23 +264,15 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/deperiv/customer-churn-prediction/blob/main/customer-churn-prediction.ipynb"
                 >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
+                  Check the project
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/deperiv/customer-churn-prediction/blob/main/customer-churn-prediction.ipynb" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -207,7 +283,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/projects/customer-churn-prediction.png"
                     />
                   </div>
                 </a>
@@ -220,7 +296,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Heart disease prediction</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -234,23 +310,15 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://github.com/deperiv/heart-disease-prediction/blob/main/heart-disease-prediction.ipynb"
                 >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="#!"
-                >
-                  Source Code
+                  Check the project
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/deperiv/heart-disease-prediction/blob/main/heart-disease-prediction.ipynb" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -261,7 +329,95 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/projects/heart-disease-prediction.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Project 4 -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Supermarket customer segmentation</h3>
+                <div>
+                  <p class="mb-4">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Excepturi neque, ipsa animi maiores repellendus distinctio
+                    aperiam earum dolor voluptatum consequatur blanditiis
+                    inventore debitis fuga numquam voluptate ex architecto
+                    itaque molestiae.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/deperiv/supermarket-customer-segmentation/blob/main/supermarket-customer-segmentation.ipynb"
+                >
+                  Check the project
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://github.com/deperiv/supermarket-customer-segmentation/blob/main/supermarket-customer-segmentation.ipynb" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/projects/customer-segmentation.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Project 5 -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Web page phishing detection</h3>
+                <div>
+                  <p class="mb-4">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Excepturi neque, ipsa animi maiores repellendus distinctio
+                    aperiam earum dolor voluptatum consequatur blanditiis
+                    inventore debitis fuga numquam voluptate ex architecto
+                    itaque molestiae.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/deperiv/web-page-phishing-detection/blob/main/web-page-phishing-detection.ipynb"
+                >
+                  Check the project
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="https://github.com/deperiv/web-page-phishing-detection/blob/main/web-page-phishing-detection.ipynb" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/projects/phishing-detection.jpg"
                     />
                   </div>
                 </a>
@@ -278,14 +434,23 @@
     <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
-        <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+        <div class="contact-wrapper">
+          <p class="contact-wrapper__text">Email: danielpblog2014@gmail.com
+          </p>
+          <!-- <p class="contact-wrapper__text">You can email me to danielpblog2014@gmail.com <br>  or send me a direct message through LinkedIn</p> -->
           <a
             rel="noreferrer"
             target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            class="cta-btn cta-btn--resume btn-email"
+            href="mailto:danielpblog2014@gmail.com"
+            >Email me</a
+          >
+          <a
+            rel="noreferrer"
+            target="_blank"
+            class="cta-btn cta-btn--resume btn-linkedin"
+            href="https://www.linkedin.com/in/daniel-eduardo-peraza-rivera/"
+            >LinkedIn</a
           >
         </div>
       </div>
@@ -299,13 +464,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/daniel-eduardo-peraza-rivera/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/deperiv" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -314,35 +476,13 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
+          © 2021 - Based on the template developed by
           <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
             >Jacobo Martínez</a
           >
         </p>
 
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
     <!-- /END Footer Section -->
