Add description to projects

--- a/src/index.html
+++ b/src/index.html
@@ -107,76 +107,76 @@
         <div class="slider">
           <div class="slide-track">
             <div class="slide">
-              <img src="assets/icons/python.png" width="80px" alt="" />
+              <img src="assets/icons/python.png" width="80px" class="icon" />
             </div>
             <div class="slide">
-              <img src="assets/icons/postgresql.png" width="80px" alt="" />
+              <img src="assets/icons/postgresql.png" width="80px" class="icon" />
             </div>
             <div class="slide">
-              <img src="assets/icons/sqlite.png" width="80px" alt="" />
+              <img src="assets/icons/sqlite.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/matplotlib.png" width="80px" alt="" />
+              <img src="assets/icons/matplotlib.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/pandas.png" width="80px" alt="" />
+              <img src="assets/icons/pandas.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/tensorflow.png" width="80px" alt="" />
+              <img src="assets/icons/tensorflow.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/keras.png" width="80px" alt="" />
+              <img src="assets/icons/keras.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/scikitlearn.png" width="80px" alt="" />
+              <img src="assets/icons/scikitlearn.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/numpy.png" width="80px" alt="" />
+              <img src="assets/icons/numpy.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/javascript.png" width="80px" alt="" />
+              <img src="assets/icons/javascript.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/react.png" width="80px" alt="" />
+              <img src="assets/icons/react.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/node.png" width="80px" alt="" />
+              <img src="assets/icons/node.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/python.png" width="80px" alt="" />
+              <img src="assets/icons/python.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/postgresql.png" width="80px" alt="" />
+              <img src="assets/icons/postgresql.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/sqlite.png" width="80px" alt="" />
+              <img src="assets/icons/sqlite.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/matplotlib.png" width="80px" alt="" />
+              <img src="assets/icons/matplotlib.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/pandas.png" width="80px" alt="" />
+              <img src="assets/icons/pandas.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/tensorflow.png" width="80px" alt="" />
+              <img src="assets/icons/tensorflow.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/keras.png" width="80px" alt="" />
+              <img src="assets/icons/keras.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/scikitlearn.png" width="80px" alt="" />
+              <img src="assets/icons/scikitlearn.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/numpy.png" width="80px" alt="" />
+              <img src="assets/icons/numpy.png" width="80px"class="icon" />
             </div>
             <div class="slide">
-              <img src="assets/icons/javascript.png" width="80px" alt="" />
+              <img src="assets/icons/javascript.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/react.png" width="80px" alt="" />
+              <img src="assets/icons/react.png" width="80px" class="icon"/>
             </div>
             <div class="slide">
-              <img src="assets/icons/node.png" width="80px" alt="" />
+              <img src="assets/icons/node.png" width="80px" class="icon"/>
             </div>
           </div>
         </div>
@@ -199,11 +199,10 @@
                 <h3 class="project-wrapper__text-title">House price prediction</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    How would it be if you could predict the appropriate price of a house?
+                    Wonderful, right? Yes, you can create a Machine Learning model which
+                    could predict the price of a house. The price of a house depends on various
+                    factors like the number of bedrooms, size of the house, location, etc.
                   </p>
                 </div>
                 <a
@@ -253,11 +252,17 @@
                 <h3 class="project-wrapper__text-title">Customer churn prediction</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Customer Retention is a major challenge for financial institutes 
+                    like banks. The aim of the project is to classify whether a customer 
+                    is going to churn or not. It is extremely helpful for banks to 
+                    identify and visualize which factors contribute to customer churn. <br>
+                  </p>
+                  <p class="mb-4">
+                    If banks could identify the customers who are going to churn and 
+                  also identify the probable factors that may be leading them to churn, 
+                  they can then create appropriate marketing and retention strategies 
+                  to retain the customers. For instance, they could give the customers 
+                  offers like a free credit card, low-interest loans, etc.
                   </p>
                 </div>
                 <a
@@ -299,11 +304,18 @@
                 <h3 class="project-wrapper__text-title">Heart disease prediction</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Heart diseases are the leading cause of death globally. Each year,
+                     17.9 million deaths occur, that is one death every other second. 
+                     One third of these deaths occur below the age of 70 (3). A lot of 
+                     effort is provided by researchers all over the world to provide 
+                     prevention, help, relieve, and hopefully one day cure heart diseases.
+                  </p>
+                  <p class="mb-4">
+                    Machine Learnings is finding its immense importance in the field 
+                    of healthcare. It can predict various diseases like Heart Disease, 
+                    Breast Cancer, etc. In this project we provide the values 
+                    of the factors contributing to heart disease like blood pressure, 
+                    chest pain type, cholesterol, sugar level, etc.
                   </p>
                 </div>
                 <a
@@ -343,11 +355,12 @@
                 <h3 class="project-wrapper__text-title">Supermarket customer segmentation</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Customer Segmentation is of prime importance for markets
+                    and companies. They want to divide the customers into 
+                    different segments so that different marketing strategies 
+                    can be applied to distinct segments to retain them. For example, 
+                    the supermarket store might offer more discounts to the people 
+                    who purchase from them rarely to attract them.
                   </p>
                 </div>
                 <a
@@ -387,11 +400,20 @@
                 <h3 class="project-wrapper__text-title">Web page phishing detection</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Phishing is a kind of cybercrime where attackers pose as known or
+                     trusted entities and contact individuals through email, text, or
+                      telephone and ask them to share sensitive information. Users may
+                       also be prompted to enter credit card information or bank account
+                        details as well as other sensitive data. Once this information is
+                         collected, attackers may use it to access accounts, steal data and
+                          identities, and download malware onto the user's computer.
+                  </p>
+                  <p class="mb-4">
+                    To avoid this, the only solution is to identify if there
+                           is a threat of phishing or not based on certain factors.
+                            This is really important from the security point of view.
+                             It will be extremely helpful if we could determine if
+                              there is a possible threat of phishing.
                   </p>
                 </div>
                 <a
