Change description of first project

--- a/src/index.html
+++ b/src/index.html
@@ -200,9 +200,14 @@
                 <div>
                   <p class="mb-4">
                     How would it be if you could predict the appropriate price of a house?
-                    Wonderful, right? Yes, you can create a Machine Learning model which
+                    Wonderful, right? Well, we can create a Machine Learning model which
                     could predict the price of a house. The price of a house depends on various
                     factors like the number of bedrooms, size of the house, location, etc.
+                  </p>
+                  <p class="mb-4">
+                    In this project we dive into Data Science and Machine Learning 
+                    techniques that will allow us to obtain a model capable of predicting
+                    house pricing accurately.
                   </p>
                 </div>
                 <a
